tests/ui/error-emitter/close_window.unicode.stderr
error[E0624]: method `method` is private
   ╭▸ $DIR/close_window.rs:9:7
   │
LL │     s.method();
   │       ━━━━━━ private method
   │
   ⸬  $DIR/auxiliary/close_window.rs:3:5
   │
LL │     fn method(&self) {}
   ╰╴    ──────────────── private method defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
